chore: Deployment pipeline for Dev branch

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -10,21 +10,29 @@ on:
 
 jobs:
   deploy:
-    runs-on: evote
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
+      - name: Install SSHPass
+        run: sudo apt-get update && sudo apt-get install -y sshpass
+
       - name: Deploy on server
         run: |
           sshpass -p '${{ secrets.PASSWORD }}' ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} '
+            # 1. Go to the app directory
             cd /fe-staging/open-school-portal-FE
             
+            # 2. Extract the correct artifact file
             tar -xzf /tmp/open-school-portal-fe-artifact.tar.gz
             
+            # 3. Remove the artifact file
             rm -f /tmp/open-school-portal-fe-artifact.tar.gz
             
+            # 4. Install production dependencies
             pnpm install --production --frozen-lockfile
             
-            pm2 restart evote-fe-staging --update-env || PORT=3002 pm2 start pnpm -- start --name evote-fe-staging --update-env
+            # 5. FIX: PM2 name changed to "fe-staging"
+            pm2 restart fe-staging --update-env || PORT=3002 pm2 start pnpm -- start --name fe-staging --update-env
           '
