chore(test): add extra wwhitespace to run the CD pipeline

--- a/.github/workflows/build-lint.yaml
+++ b/.github/workflows/build-lint.yaml
@@ -33,7 +33,7 @@ jobs:
         with:
           version: 9
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: pnpm install --frozen-lockfile
 
       - name: Create environment file from GitHub secrets
