chore(cd): add exosystem file to configure pm2 enviroment

--- a/.github/workflows/build-lint.yaml
+++ b/.github/workflows/build-lint.yaml
@@ -59,4 +59,4 @@ jobs:
       - name: Copy Artifacts to Server
         run: |
           sshpass -p "${{ secrets.PASSWORD }}" scp -o StrictHostKeyChecking=no open-school-portal-fe.tar.gz ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/tmp/open-school-portal-fe-artifact.tar.gz
-          rm -f   .tar.gz
+          rm -f open-school-portal-fe.tar.gz
