chore: optimize pipelines and switch from standalone to npm start
- Conditional artifact uploads on dev pushes only
- Replace .next/standalone/server.js with npm run start
- Reduces CI overhead and simplifies deployment

--- a/.github/workflows/build-lint.yaml
+++ b/.github/workflows/build-lint.yaml
@@ -53,10 +53,12 @@ jobs:
         run: pnpm run build
 
       - name: Archive Build Artifacts
+        if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
         run: |
           tar -czf open-school-portal-fe.tar.gz .next public package.json next.config.ts tsconfig.json pnpm-lock.yaml .env
 
       - name: Copy Artifacts to Server
+        if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
         run: |
           sshpass -p "${{ secrets.PASSWORD }}" scp -o StrictHostKeyChecking=no open-school-portal-fe.tar.gz ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/tmp/open-school-portal-fe-artifact.tar.gz
           rm -f open-school-portal-fe.tar.gz
