--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -12,24 +12,21 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
 
     steps:
       - name: Deploy on server
         run: |
           sshpass -p '${{ secrets.PASSWORD }}' ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} '
-            # 1. Go to the app directory
+            # 1. Go to the frontend directory
             cd /home/open-school-portal/fe-staging/open-school-portal-FE
             
-            # 2. Extract the correct artifact file
+            # 2. Extract the artifact
             tar -xzf /tmp/open-school-portal-fe-artifact.tar.gz
-
-            cp .next/standalone/server.js .
             
             # 3. Remove the artifact file
             rm -f /tmp/open-school-portal-fe-artifact.tar.gz
-        
             
-            # 4. Restart PM2 process using ecosystem config
-            pm2 restart fe-staging --update-env || PORT=3002 pm2 start server.js --name fe-staging --update-env
+            # 4. Restart PM2 process
+            pm2 restart fe-staging --update-env || (PORT=3002 pm2 start npm --name fe-staging -- run start && pm2 save)
           '
