--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -28,6 +28,6 @@ jobs:
             rm -f /tmp/open-school-portal-fe-artifact.tar.gz
             
             # 4. Restart PM2 process using ecosystem config
-            pm2 start ecosystem.config.mjs --update-env || pm2 restart fe-staging --update-env
+            pm2 start pm2 start ecosystem.config.cjs || pm2 restart fe-staging --update-env
             pm2 save
           '
