fix deployment pipeline for production environment and update runner labels

--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -1,14 +1,14 @@
-name: CI Pipeline
+name: CI Pipeline Production
 on:
   pull_request:
     branches:
-      - dev
+      - main
     paths-ignore:
       - "README.md"
       - ".github/workflows/**"
   push:
     branches:
-      - dev
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
