--- a/.github/workflows/cd-prod.yml
+++ b/.github/workflows/cd-prod.yml
@@ -1,11 +1,11 @@
-name: Deployment Pipeline Staging
+name: Deployment Pipeline Production
 on:
   workflow_run:
-    workflows: ["CI Pipeline Staging"]
+    workflows: ["CI Pipeline Production"]
     types:
       - completed
     branches:
-      - staging
+      - main
   workflow_dispatch:
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
         run: |
           sshpass -p '${{ secrets.PASSWORD }}' ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} '
             # 1. Go to the frontend directory
-            cd open-school/staging/open-school-portal-FE
+            cd open-school/prod/open-school-portal-FE
             
             # 2. Extract the artifact
             tar -xzf /tmp/open-school-portal-fe-artifact.tar.gz
@@ -28,6 +28,6 @@ jobs:
             rm -f /tmp/open-school-portal-fe-artifact.tar.gz
             
             # 4. Restart PM2 process using ecosystem config
-            pm2 reload ecosystem.config.cjs || pm2 restart osp-fe-staging --update-env
+            pm2 reload ecosystem.config.cjs || pm2 restart osp-fe-prod --update-env
             pm2 save
           '
