--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Create environment file from GitHub secrets
         run: |
-          echo "${{ secrets.ENV_AUTH }}" > .env
+          echo "${{ secrets.ENV_AUTH_STAGING }}" > .env
 
       - name: Lint code
         run: pnpm run lint
@@ -58,5 +58,5 @@ jobs:
 
       - name: Copy Artifacts to Server
         run: |
-          sshpass -p "${{ secrets.PASSWORD }}" scp -o StrictHostKeyChecking=no open-school-portal-fe.tar.gz ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/tmp/open-school-portal-fe-artifact.tar.gz
+          sshpass -p "${{ secrets.PASSWORD }}" scp -o StrictHostKeyChecking=no open-school-portal-fe.tar.gz ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/tmp/staging/open-school-portal-fe-artifact.tar.gz
           rm -f open-school-portal-fe.tar.gz
