--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: hng-13-runner
+    runs-on: self-hosted
     timeout-minutes: 10
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
 
