--- a/.github/workflows/build-lint.yaml
+++ b/.github/workflows/build-lint.yaml
@@ -2,13 +2,13 @@ name: CI Pipeline
 on:
   pull_request:
     branches:
-      - staging
+      - dev
     paths-ignore:
       - "README.md"
       - ".github/workflows/**"
   push:
     branches:
-      - staging
+      - dev
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -51,12 +51,3 @@ jobs:
 
       - name: Build project
         run: pnpm run build
-
-      - name: Archive Build Artifacts
-        run: |
-          tar -czf open-school-portal-fe.tar.gz .next public package.json next.config.ts tsconfig.json pnpm-lock.yaml ecosystem.config.mjs .env
-
-      - name: Copy Artifacts to Server
-        run: |
-          sshpass -p "${{ secrets.PASSWORD }}" scp -o StrictHostKeyChecking=no open-school-portal-fe.tar.gz ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/tmp/staging/open-school-portal-fe-artifact.tar.gz
-          rm -f open-school-portal-fe.tar.gz
