--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Create environment file from GitHub secrets
         run: |
-          echo "${{ secrets.ENV_AUTH }}" > .env
+          echo "${{ secrets.ENV_AUTH_STAGING }}" > .env
 
       - name: Lint code
         run: pnpm run lint
