--- a/.github/workflows/cd-staging.yml
+++ b/.github/workflows/cd-staging.yml
@@ -27,7 +27,10 @@ jobs:
             # 3. Remove the artifact file
             rm -f /tmp/staging/open-school-portal-fe-artifact.tar.gz
             
-            # 4. Restart PM2 process using ecosystem config
+            # 4. Update packages/Dependencies
+            pnpm i
+
+            # 5. Restart PM2 process using ecosystem config
             pm2 start ecosystem.config.cjs || pm2 restart osp-fe-staging --update-env
             pm2 save
           '
