--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "motion": "^12.23.24",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
+    "next-pwa": "^5.6.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
